# DailyPaper

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
deploy/: paperbot.service  paperbot.timer
paperbot/: __init__.py  __main__.py  ai.py  cli.py  config.py  db.py  http.py  line.py  models.py  papers.py  service.py  sources.py
tests/: test_ai.py  test_db.py  test_line.py  test_models.py  test_papers.py  test_sources.py
