[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-paper-bot"
version = "0.1.0"
description = "Daily computer architecture paper digest delivered through LINE"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1",
  "pydantic>=2.8,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
paperbot = "paperbot.cli:main"

[tool.setuptools.packages.find]
include = ["paperbot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

